--- a/Overkill.Websockets/Overkill.Websockets.csproj
+++ b/Overkill.Websockets/Overkill.Websockets.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Overkill.Common\Overkill.Common.csproj" />
     <ProjectReference Include="..\Overkill.Core\Overkill.Core.csproj" />
-    <ProjectReference Include="..\Overkill.Messaging\Overkill.PubSub.csproj" />
+    <ProjectReference Include="..\Overkill.PubSub\Overkill.PubSub.csproj" />
     <ProjectReference Include="..\WebSocketSharp.NetCore\WebSocketSharp.NetCore.csproj" />
   </ItemGroup>
 
