--- a/Overkill.Core/Overkill.Core.csproj
+++ b/Overkill.Core/Overkill.Core.csproj
@@ -2,13 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>Cameron Cooper</Authors>
     <Company>Cameron Cooper</Company>
     <Product>OverkillFramework</Product>
     <Description>Open Source Robotics Framework</Description>
     <RepositoryUrl>https://github.com/cameron5906/OverkillFramework</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
+    <Version>1.0.7</Version>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
